# fase-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  backup-download-db.sh  backup-download-test-db.sh  backup-upload-db.sh  contracts.xlsx  docker-compose.test.yml  docker-compose.yml  exploration.ipynb  exploration.py  main.py  min_salaries.py  pyproject.toml  requirements.txt  run_as_module.py  scrape_spotrac.py  todo.md
alembic/: env.py
alembic/versions/: 2653826c8950_add_expected_cap_column.py  40e1d2350b71_rename_season_to_season_id_across_tables.py  4296e7e5c2a0_float_cap_to_int.py  8f1b5d592631_rename_year_to_season_on_team_player_.py  e0260afe60ef_rename_year_to_season_on_team_player_.py  fk_season_all_tables.py
app/: base.py  custom_types.py  exceptions.py
app/data/: connection.py  to_python_syntax.py
app/exploration/: age_to_earnings.py
app/fill_data/: awards.py  contracts.py  estimate_future_season_value.py  payrolls.py  player_seasons.py  players.py  players_nba_api.py  prospects.py  scrape_spotrac.py  scrape_spotrac_team_seasons.py  seasons.py  team_seasons.py  teams.py  upload_awards.py  upload_contracts.py  upload_payrolls.py  upload_player_seasons.py  upload_prospects.py  upload_team_seasons.py
app/scraping/: scrape_spotrac.py
app/tests/: test_1.py
app/utils/: math_utils.py  name_matcher.py  team_id_map.py  voided_contracts.py
data/: backup.sql  cap-by-year.csv  confident-existed.json  contracts-for-ml.csv  contracts-for-ml.parquet  name-map.json  never-existed.json  never-existed.txt  options.csv  teams.csv  voided-contracts.json
data/contracts/: NBA Contracts-01.csv  NBA Contracts-02.csv  NBA Contracts-03.csv  NBA Contracts-04.csv  NBA Contracts-06.csv  NBA Contracts-07.csv  NBA Contracts-08.csv  NBA Contracts-1.csv  NBA Contracts-10.csv  NBA Contracts-11.csv  NBA Contracts-12.csv  NBA Contracts-13.csv  NBA Contracts-14.csv  NBA Contracts-15.csv  NBA Contracts-16.csv  NBA Contracts-17.csv  NBA Contracts-3.csv  NBA Contracts-5.csv  NBA Contracts-6.csv  NBA Contracts-8.csv  NBA Contracts-9.csv
documentation/: homework-assignments.md  nba-rules.md
tests/: conftest.py  connection.py  dataclasses.py  utils.py
(+1465 files in other folders)
