[project]
name = "fase-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "lxml>=6.0.2",
    "nba-api>=1.11.3",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "playwright>=1.57.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "ruff>=0.14.11",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
