[project]
name = "fase-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.1",
    "fastapi>=0.128.0",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lxml>=6.0.2",
    "nba-api>=1.11.3",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff.lint]
select = [
  "ANN001", # missing type annotation for function argument
  "ANN002", # missing type annotation for *args
  "ANN003", # missing type annotation for **kwargs
  "ANN201", # missing return type annotation (public function)
  "ANN202", # missing return type annotation (private function)
  "ANN204", # missing return type annotation (special method)
]


[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.11",
    "mypy-extensions>=1.1.0",
    "pandas-stubs>=2.3.3.260113",
    "pathspec>=1.0.4",
    "pytokens>=0.4.0",
    "ty>=0.0.14",
    "ipykernel>=7.1.0",
    "playwright>=1.57.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

filterwarnings = ["ignore::Warning"]

[tool.coverage.run]
omit = ["__init__.py"]
